--- a/task_management.client/src/index.css
+++ b/task_management.client/src/index.css
@@ -3,12 +3,10 @@
   text-align: center;
   margin: 0 auto;
 
-  /* Flexbox for vertical centering */
-  justify-content: center; /* Horizontal centering */
-  align-items: center; /* Vertical centering */
+  justify-content: center; 
+  align-items: center; 
 
-  /* Ensure parent container has height set */
-  height: 80vh; /* Full viewport height */
+  height: 80vh; 
 }
 
 @media (min-width: 826px) {
@@ -17,10 +15,28 @@
     align-items: center;
     width: 30%;
     text-align: center;
-    
-    /* Half the width for medium screens and larger */
   }
 }
+
+
+
+.responsive-home-div {
+  width: 80%;
+  margin: 0 auto;
+  justify-content: center; 
+  align-items: center; 
+
+  height: 80vh; 
+}
+
+@media (min-width: 826px) {
+  .responsive-home-div {
+    align-content: center;
+    align-items: center;
+    width: 50%;
+  }
+}
+
 
 
 
